@@ -1,3 +1,7 @@
+2012-02-23  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
+        * Tag as TrigT1CaloMonitoring-00-10-20
+        * Use new merge method lowerLB for DB status plots.
+
 2012-02-16  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
         * Tag as TrigT1CaloMonitoring-00-10-19
         * Tier0 merging fixes.
